plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
	id 'org.sonarqube' version '6.0.1.5171'
}

group = 'com.gearshow'
version = '0.0.1-SNAPSHOT'
description = 'GearShow Backend API'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// Apache Commons
	implementation 'org.apache.commons:commons-lang3'

	// AWS S3
	implementation platform('software.amazon.awssdk:bom:2.31.9')
	implementation 'software.amazon.awssdk:s3'

	// Kafka
	implementation 'org.springframework.kafka:spring-kafka'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Database
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Testcontainers
	testImplementation 'org.testcontainers:testcontainers'
	testImplementation 'org.testcontainers:mysql'
	testImplementation 'org.testcontainers:kafka'
	testImplementation 'org.testcontainers:junit-jupiter'

	// Kafka Test
	testImplementation 'org.springframework.kafka:spring-kafka-test'

	// Cucumber
	testImplementation 'io.cucumber:cucumber-java:7.22.0'
	testImplementation 'io.cucumber:cucumber-spring:7.22.0'
	testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.22.0'
	testImplementation 'org.junit.platform:junit-platform-suite'
}

tasks.named('test') {
	useJUnitPlatform()
	systemProperty 'cucumber.junit-platform.naming-strategy', 'long'
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
	}

	// 아직 UseCase가 구현되지 않은 도메인은 커버리지 측정에서 제외
	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, excludes: jacocoExcludes)
		}))
	}
}

// JaCoCo 제외 대상 (UseCase 구현 시 해당 항목 제거)
ext.jacocoExcludes = [
	// OAuth Adapter (테스트에서 Stub 사용)
	'**/oauth/**',
	// JPA Entity (Adapter 통합 테스트에서 간접 커버)
	'**/*JpaEntity.*',
	// 유틸리티 클래스
	'**/PageTokenUtil.*',
	// 전역 예외 핸들러
	'**/GlobalExceptionHandler.*',
	// Spring Boot 메인 클래스
	'**/GearShowApplication.*',
	// Kafka 인프라 (테스트에서 Mock 사용, 실제 브로커 필요)
	'**/infrastructure/config/Kafka*.*',
	'**/infrastructure/config/NoOpKafkaConfig.*',
	'**/messaging/kafka/**',
	'**/messaging/dto/**',
	// Fake 3D 모델 클라이언트 (Kafka 활성화 시에만 동작)
	'**/model3d/fake/**',
	// S3 인프라 (테스트에서 Mock 사용)
	'**/infrastructure/config/S3Config.*',
	'**/storage/s3/**',
	// Port 인터페이스 (구현체에서 간접 커버)
	'**/port/out/ModelGenerationClient.*',
	'**/port/in/ManageShowcaseImageUseCase.*'
]

jacocoTestCoverageVerification {
	violationRules {
		rule {
			// 전체 커버리지 70% 이상 필수
			limit {
				minimum = 0.70
			}
		}
	}

	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, excludes: jacocoExcludes)
		}))
	}
}

// build 시 커버리지 검증 포함
tasks.named('check') {
	dependsOn jacocoTestCoverageVerification
}

// .env 파일에서 환경변수를 로드하여 bootRun에 전달
bootRun {
	def envFile = file('.env')
	if (envFile.exists()) {
		envFile.readLines().each { line ->
			def trimmed = line.trim()
			if (trimmed && !trimmed.startsWith('#')) {
				def parts = trimmed.split('=', 2)
				if (parts.length == 2) {
					environment parts[0].trim(), parts[1].trim()
				}
			}
		}
	}
}

sonar {
	properties {
		property 'sonar.projectKey', 'opixxx_GearShow'
		property 'sonar.organization', 'opixxx'
		property 'sonar.host.url', 'https://sonarcloud.io'
		property 'sonar.coverage.jacoco.xmlReportPaths', "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"

		// JaCoCo 제외 대상과 동일하게 SonarCloud 커버리지 측정 제외
		property 'sonar.coverage.exclusions', [
			'**/oauth/**',
			'**/*JpaEntity.java',
			'**/PageTokenUtil.java',
			'**/GlobalExceptionHandler.java',
			'**/GearShowApplication.java',
			'**/infrastructure/config/Kafka*.java',
			'**/infrastructure/config/NoOpKafkaConfig.java',
			'**/messaging/kafka/**',
			'**/messaging/dto/**',
			'**/model3d/fake/**',
			'**/infrastructure/config/S3Config.java',
			'**/storage/s3/**',
			'**/port/out/ModelGenerationClient.java',
			'**/port/in/ManageShowcaseImageUseCase.java'
		].join(',')
	}
}
